Version 3.10.2
- BREAKING CHANGE: Replaced custom binary morphological filters with those in Code/Review
- Added wrapping for VanHerkGilWerman erode/dilate filters (in ManagedITK.MorphologicalFilters)
- Added wrapping for MorphologicalWatershedFromMarkersImageFilter (in ManagedITK.MorphologicalFilters)
- Added wrapping for KappaSigmaThresholdImageFilter (in ManagedITK.ThresholdFilters)

Version 3.10.0.1
- Changed mesh wrappers to use WRAP_ITK_REAL (float, rather than double, is now wrapped by default)
- Fixed bug with external projects
- Added Compose to itkManagedMatrixOffsetTransform
- Added boolean type to default wrapping parameters
- Added patch for issue with VersorTransform
- Added wrapping for FastMarchingUpwindGradientImageFilter

Version 3.8.0.1
- Updated to ITK Release 3.8.0 (July 30 2008)
- Removed RGBAPixel patches which are now supported by ITK
- Added MANAGED_ITK_ASSEMBLY_PREFIX CMake variable to change assembly names
- Fixed wrapping bug with itkImageRegistrationMethod wrapping
- Added wrapping for MultiResolutionImageRegistrationMethod (in ManagedITK.Registration)
- Improved wrapping for meshes (added set point and cell methods)

Version 3.6.0.3
- Added InPlace and CanRunInPlace properties to all InPlaceImageFilters
- Added wrapping for ScaleShiftImageFilter (in ManagedITK.IntensityFilters)
- BREAKING CHANGE: reworked wrapping types for FastMarchingImageFilter
- Added wrapping for a number of spatial objects

Version 3.6.0.2
- BREAKING CHANGE: refactored NativePointer to use IntPtr instead of void*
- BREAKING CHANGE: refactored event wrapping, including delegate names
- Added wrapping for QuadEdgeMesh
- Improved wrapping for meshes (added get point and cell methods)
- Improved hashing capabilities (GetHashCode()) of itkArray and subclasses
- Added Vesselness external project
- Added wrapping for AntiAliasBinaryImageFilter (in ManagedITK.LevelSetFilters)
- Added wrapping for ImageIOBase and most subclasses (in ManagedITK.IO)