@@ -3,6 +3,7 @@ Version 3.10.2
 - Added wrapping for VanHerkGilWerman erode/dilate filters (in ManagedITK.MorphologicalFilters)
 - Added wrapping for MorphologicalWatershedFromMarkersImageFilter (in ManagedITK.MorphologicalFilters)
 - Added wrapping for KappaSigmaThresholdImageFilter (in ManagedITK.ThresholdFilters)
+- Added wrapping for unsigned long for various filters
 
 Version 3.10.0.1
 - Changed mesh wrappers to use WRAP_ITK_REAL (float, rather than double, is now wrapped by default)
